# donut-test

./: .gitignore  .pre-commit-config.yaml  README.md  cspell.json  pyproject.toml
scripts/: dummy_business_card.py  test.py  train.py
src/domain/: business_card.py  dataset.py  inference_processor.py  model.py
